--- a/app/index.html
+++ b/app/index.html
@@ -697,37 +697,25 @@
               <div class="slide">
                 <div class="product-card">
                   <a href="#" class="btn-add-favorite">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#heart"></use>
-                    </svg>
+                    <i class="fas fa-heart"></i>
                   </a>
                   <a href="publication.html" class="product-card__img"><img src="img/no_image.png" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                     </ul>
                     <a href="publication.html" class="product-card__title">Lorem ipsum dolor</a>
@@ -741,37 +729,25 @@
               <div class="slide">
                 <div class="product-card">
                   <a href="#" class="btn-add-favorite">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#heart"></use>
-                    </svg>
+                    <i class="fas fa-heart"></i>
                   </a>
                   <a href="publication.html" class="product-card__img"><img src="img/9d92a9fe-013e-412e-9e5e-c964d2bb410a.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                     </ul>
                     <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur
@@ -785,37 +761,25 @@
               <div class="slide">
                 <div class="product-card">
                   <a href="#" class="btn-add-favorite">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#heart"></use>
-                    </svg>
+                    <i class="fas fa-heart"></i>
                   </a>
                   <a href="publication.html" class="product-card__img"><img src="img/82e4b0b9-c96c-4a15-ae61-4e6e6b79d7a3.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li class="star0">
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                     </ul>
                     <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur
@@ -830,37 +794,25 @@
               <div class="slide">
                 <div class="product-card">
                   <a href="#" class="btn-add-favorite">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#heart"></use>
-                    </svg>
+                    <i class="fas fa-heart"></i>
                   </a>
                   <a href="publication.html" class="product-card__img"><img src="img/92e9d9c0-6511-4915-9c78-0310cc3fa713.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                     </ul>
                     <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur
@@ -875,37 +827,25 @@
               <div class="slide">
                 <div class="product-card">
                   <a href="#" class="btn-add-favorite">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#heart"></use>
-                    </svg>
+                    <i class="fas fa-heart"></i>
                   </a>
                   <a href="publication.html" class="product-card__img"><img src="img/349a58a9-efba-422f-af08-07636c1e7eac.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                     </ul>
                     <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur
@@ -1132,10 +1072,10 @@
         <div class="row">
           <div class="col-12">
             <ul class="menu-footer">
-              <li><a href="#">AGB</a></li>
-              <li><a href="#">Impressum</a></li>
+              <li><a href="agb.html">AGB</a></li>
+              <li><a href="impressum.html">Impressum</a></li>
               <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="contacts.html">Kontakt</a></li>
             </ul>
           </div>
 
@@ -1144,19 +1084,25 @@
 
             <ul class="list-social">
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
+                <i class="fab fa-instagram"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#twitter"></use>
-                </svg>
+                <i class="fab fa-twitter"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#fb"></use>
-                </svg>
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
               </a></li>
             </ul>
           </div>
