--- a/app/product-list.html
+++ b/app/product-list.html
@@ -707,29 +707,19 @@
                         <div class="rating-wrapper">
                           <ul class="list-rating">
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                           </ul>
                           <div class="rating-val">(0)</div>
@@ -744,16 +734,25 @@
                     </div>
                     <div class="card-product__footer">
                       <div class="profile-info__head">
-                        <button class="profile-info__links btn-block publicItem color-green"><span class="color-green">+ Veröffentlichen</span>
+                        <button class="profile-info__links profile-info__links-btn btn-block publicItem color-green">
+                          <span class="color-green"><span class="svg-icon">
+                           <i class="fas fa-plus"></i>
+                          </span>Veröffentlichen</span>
                         </button>
 
-                        <a href="#" class="profile-info__links">
+                        <a href="#" class="profile-info__links profile-info__links-btn">
                           <span class="svg-icon">
                             <i class="fas fa-edit"></i>
                           </span>
                           Bearbeiten</a>
-                        <span class="btn btn-danger btn-danger-my btn-block deleteItem" data-link="#"
-                              data-toggle="modal" data-target="#modalDelete">Löschen</span>
+
+                        <a href="#" class="profile-info__links profile-info__links-btn profile-info__links-delete" data-toggle="modal" data-target="#modalDelete">
+                          <span class="color-red"><span class="svg-icon">
+                            <i class="far fa-trash-alt"></i>
+                          </span>Löschen</span></a>
+
+<!--                        <span class="btn btn-danger btn-danger-my btn-block deleteItem" data-link="#"-->
+<!--                              data-toggle="modal" data-target="#modalDelete">Löschen</span>-->
                       </div>
                     </div>
                   </div>
@@ -767,29 +766,19 @@
                         <div class="rating-wrapper">
                           <ul class="list-rating">
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                           </ul>
                           <div class="rating-val">(0)</div>
@@ -804,16 +793,20 @@
                     </div>
                     <div class="card-product__footer">
                       <div class="profile-info__head">
-                        <button class="profile-info__links btn-block notPublicItem"><span class="color-red">✕ Nicht veröffentlichen</span>
+                        <button class="profile-info__links profile-info__links-btn btn-block notPublicItem"><span class="color-red">✕ Nicht veröffentlichen</span>
                         </button>
 
-                        <a href="#" class="profile-info__links">
+                        <a href="#" class="profile-info__links profile-info__links-btn">
                           <span class="svg-icon">
                             <i class="fas fa-edit"></i>
                           </span>
                           Bearbeiten</a>
-                        <span class="btn btn-danger btn-danger-my btn-block deleteItem"
-                              data-toggle="modal" data-target="#modalDelete">Löschen</span>
+<!--                        <span class="btn btn-danger btn-danger-my btn-block deleteItem"-->
+<!--                              data-toggle="modal" data-target="#modalDelete">Löschen</span>-->
+                        <a href="#" class="profile-info__links profile-info__links-btn profile-info__links-delete" data-toggle="modal" data-target="#modalDelete">
+                          <span class="color-red"><span class="svg-icon">
+                            <i class="far fa-trash-alt"></i>
+                          </span>Löschen</span></a>
                       </div>
                     </div>
                   </div>
@@ -827,29 +820,19 @@
                         <div class="rating-wrapper">
                           <ul class="list-rating">
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li class="star0">
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                           </ul>
                           <div class="rating-val">(0)</div>
@@ -864,17 +847,18 @@
                     </div>
                     <div class="card-product__footer">
                       <div class="profile-info__head">
-                        <button class="profile-info__links btn-block notPublicItem"><span class="color-red">✕ Nicht veröffentlichen</span>
+                        <button class="profile-info__links btn-block notPublicItem profile-info__links-btn"><span class="color-red">✕ Nicht veröffentlichen</span>
                         </button>
 
-                        <a href="#" class="profile-info__links">
+                        <a href="#" class="profile-info__links profile-info__links-btn">
                           <span class="svg-icon">
                             <i class="fas fa-edit"></i>
                           </span>
                           Bearbeiten</a>
-                        <span class="btn btn-danger btn-danger-my btn-block deleteItem"
-                              data-toggle="modal"
-                              data-target="#modalDelete">Löschen</span>
+                        <a href="#" class="profile-info__links profile-info__links-btn profile-info__links-delete" data-toggle="modal" data-target="#modalDelete">
+                          <span class="color-red"><span class="svg-icon">
+                            <i class="far fa-trash-alt"></i>
+                          </span>Löschen</span></a>
                       </div>
                     </div>
                   </div>
@@ -914,10 +898,10 @@
         <div class="row">
           <div class="col-12">
             <ul class="menu-footer">
-              <li><a href="#">AGB</a></li>
-              <li><a href="#">Impressum</a></li>
+              <li><a href="agb.html">AGB</a></li>
+              <li><a href="impressum.html">Impressum</a></li>
               <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="contacts.html">Kontakt</a></li>
             </ul>
           </div>
 
@@ -926,19 +910,25 @@
 
             <ul class="list-social">
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
+                <i class="fab fa-instagram"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#twitter"></use>
-                </svg>
+                <i class="fab fa-twitter"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#fb"></use>
-                </svg>
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
               </a></li>
             </ul>
           </div>
