--- a/app/registration.html
+++ b/app/registration.html
@@ -769,10 +769,10 @@
         <div class="row">
           <div class="col-12">
             <ul class="menu-footer">
-              <li><a href="#">AGB</a></li>
-              <li><a href="#">Impressum</a></li>
+              <li><a href="agb.html">AGB</a></li>
+              <li><a href="impressum.html">Impressum</a></li>
               <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="contacts.html">Kontakt</a></li>
             </ul>
           </div>
 
@@ -781,19 +781,25 @@
 
             <ul class="list-social">
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
+                <i class="fab fa-instagram"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#twitter"></use>
-                </svg>
+                <i class="fab fa-twitter"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#fb"></use>
-                </svg>
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
               </a></li>
             </ul>
           </div>
