--- a/app/favorites.html
+++ b/app/favorites.html
@@ -698,29 +698,19 @@
                         <div class="rating-wrapper">
                           <ul class="list-rating">
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                           </ul>
                           <div class="rating-val">(32)</div>
@@ -739,15 +729,11 @@
                     <div class="card-product__footer">
                       <div class="profile-info__head">
                         <a href="#" class="profile-info__links links-favorite">
-                          <svg class="svg-icon">
-                            <use xlink:href="img/sprite.svg#heart"></use>
-                          </svg>
+                          <i class="fas fa-heart"></i>
                           <span>Merken |</span>
                         </a>
                         <a href="#" class="profile-info__links">
-                          <svg class="svg-icon">
-                            <use xlink:href="img/sprite.svg#user"></use>
-                          </svg>
+                          <i class="fas fa-user-check"></i>
                           <span>Zu dem Anbieter</span>
                         </a>
                       </div>
@@ -763,29 +749,19 @@
                         <div class="rating-wrapper">
                           <ul class="list-rating">
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                           </ul>
                           <div class="rating-val">(32)</div>
@@ -804,15 +780,11 @@
                     <div class="card-product__footer">
                       <div class="profile-info__head">
                         <a href="#" class="profile-info__links links-favorite">
-                          <svg class="svg-icon">
-                            <use xlink:href="img/sprite.svg#heart"></use>
-                          </svg>
+                          <i class="fas fa-heart"></i>
                           <span>Merken |</span>
                         </a>
                         <a href="#" class="profile-info__links">
-                          <svg class="svg-icon">
-                            <use xlink:href="img/sprite.svg#user"></use>
-                          </svg>
+                          <i class="fas fa-user-check"></i>
                           <span>Zu dem Anbieter</span>
                         </a>
                       </div>
@@ -828,29 +800,19 @@
                         <div class="rating-wrapper">
                           <ul class="list-rating">
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                             <li>
-                              <svg class="svg-icon">
-                                <use xlink:href="img/sprite.svg#star"></use>
-                              </svg>
+                              <i class="fas fa-star"></i>
                             </li>
                           </ul>
                           <div class="rating-val">(32)</div>
@@ -869,15 +831,11 @@
                     <div class="card-product__footer">
                       <div class="profile-info__head">
                         <a href="#" class="profile-info__links links-favorite">
-                          <svg class="svg-icon">
-                            <use xlink:href="img/sprite.svg#heart"></use>
-                          </svg>
+                          <i class="fas fa-heart"></i>
                           <span>Merken |</span>
                         </a>
                         <a href="#" class="profile-info__links">
-                          <svg class="svg-icon">
-                            <use xlink:href="img/sprite.svg#user"></use>
-                          </svg>
+                          <i class="fas fa-user-check"></i>
                           <span>Zu dem Anbieter</span>
                         </a>
                       </div>
@@ -917,10 +875,10 @@
         <div class="row">
           <div class="col-12">
             <ul class="menu-footer">
-              <li><a href="#">AGB</a></li>
-              <li><a href="#">Impressum</a></li>
+              <li><a href="agb.html">AGB</a></li>
+              <li><a href="impressum.html">Impressum</a></li>
               <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="contacts.html">Kontakt</a></li>
             </ul>
           </div>
 
@@ -929,19 +887,25 @@
 
             <ul class="list-social">
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
+                <i class="fab fa-instagram"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#twitter"></use>
-                </svg>
+                <i class="fab fa-twitter"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#fb"></use>
-                </svg>
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
               </a></li>
             </ul>
           </div>
