--- a/app/profile.html
+++ b/app/profile.html
@@ -678,29 +678,19 @@
                   <h2>Bester Fliesenleger</h2>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -735,22 +725,28 @@
                     Teilen:
                   </h3>
                   <ul class="list-social">
-                    <li><a href="#">
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#instagram"></use>
-                      </svg>
-                    </a></li>
-                    <li><a href="#">
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#twitter"></use>
-                      </svg>
-                    </a></li>
-                    <li><a href="#">
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#fb"></use>
-                      </svg>
-                    </a></li>
-                  </ul>
+              <li><a href="#">
+                <i class="fab fa-instagram"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-twitter"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
+              </a></li>
+            </ul>
                 </div>
               </div>
             </div>
@@ -760,15 +756,11 @@
               <div class="profile-info__head">
                 <h3>Infos:</h3>
                 <a href="#" class="profile-info__links links-favorite">
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#heart"></use>
-                  </svg>
+                  <i class="fas fa-heart"></i>
                   <span>Merken |</span>
                 </a>
                 <a href="#" class="profile-info__links" data-toggle="modal" data-target="#contactModal">
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#mail"></use>
-                  </svg>
+                  <i class="far fa-envelope"></i>
                   <span>Kontakt</span>
                 </a>
               </div>
@@ -780,22 +772,28 @@
                   <p>Website: <a href="#" class="d-inline color-accent">***</a></p>
                 </div>
                 <ul class="list-social">
-                  <li><a href="#">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#instagram"></use>
-                    </svg>
-                  </a></li>
-                  <li><a href="#">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#twitter"></use>
-                    </svg>
-                  </a></li>
-                  <li><a href="#">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#fb"></use>
-                    </svg>
-                  </a></li>
-                </ul>
+              <li><a href="#">
+                <i class="fab fa-instagram"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-twitter"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
+              </a></li>
+            </ul>
 
                 <div class="map-profile">
                   <iframe
@@ -1007,29 +1005,19 @@
               <h2>Bewertungen: </h2>
               <ul class="list-rating">
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
               </ul>
             </div>
@@ -1042,29 +1030,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1080,29 +1058,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1118,29 +1086,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1156,29 +1114,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1220,10 +1168,10 @@
         <div class="row">
           <div class="col-12">
             <ul class="menu-footer">
-              <li><a href="#">AGB</a></li>
-              <li><a href="#">Impressum</a></li>
+              <li><a href="agb.html">AGB</a></li>
+              <li><a href="impressum.html">Impressum</a></li>
               <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="contacts.html">Kontakt</a></li>
             </ul>
           </div>
 
@@ -1232,19 +1180,25 @@
 
             <ul class="list-social">
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
+                <i class="fab fa-instagram"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#twitter"></use>
-                </svg>
+                <i class="fab fa-twitter"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#fb"></use>
-                </svg>
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
               </a></li>
             </ul>
           </div>
