--- a/app/publication.html
+++ b/app/publication.html
@@ -780,22 +780,28 @@
                   Teilen:
                 </h3>
                 <ul class="list-social">
-                  <li><a href="#">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#instagram"></use>
-                    </svg>
-                  </a></li>
-                  <li><a href="#">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#twitter"></use>
-                    </svg>
-                  </a></li>
-                  <li><a href="#">
-                    <svg class="svg-icon">
-                      <use xlink:href="img/sprite.svg#fb"></use>
-                    </svg>
-                  </a></li>
-                </ul>
+              <li><a href="#">
+                <i class="fab fa-instagram"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-twitter"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
+              </a></li>
+            </ul>
               </div>
             </div>
           </div>
@@ -804,43 +810,29 @@
               <h1>Fliesen legen</h1>
               <ul class="list-rating">
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
               </ul>
               <div class="price">99,99 Euro <span>/ Stunde</span></div>
               <div class="profile-info__head">
                 <a href="#" class="profile-info__links links-favorite">
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#heart"></use>
-                  </svg>
+                  <i class="fas fa-heart"></i>
                   <span>Merken |</span>
                 </a>
                 <a href="#" class="profile-info__links" data-toggle="modal" data-target="#contactModal">
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#mail"></use>
-                  </svg>
+                  <i class="far fa-envelope"></i>
                   <span>Kontakt</span>
                 </a>
               </div>
@@ -852,29 +844,19 @@
                     <h2>Bester Fliesenleger</h2>
                     <ul class="list-rating">
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                       <li>
-                        <svg class="svg-icon">
-                          <use xlink:href="img/sprite.svg#star"></use>
-                        </svg>
+                        <i class="fas fa-star"></i>
                       </li>
                     </ul>
                   </div>
@@ -1077,29 +1059,19 @@
               <h2>Bewertungen: </h2>
               <ul class="list-rating">
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
                 <li>
-                  <svg class="svg-icon">
-                    <use xlink:href="img/sprite.svg#star"></use>
-                  </svg>
+                  <i class="fas fa-star"></i>
                 </li>
               </ul>
             </div>
@@ -1112,29 +1084,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1151,29 +1113,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1190,29 +1142,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1229,29 +1171,19 @@
                   <h3><span>Von</span> Bester Fliesenleger</h3>
                   <ul class="list-rating">
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                     <li>
-                      <svg class="svg-icon">
-                        <use xlink:href="img/sprite.svg#star"></use>
-                      </svg>
+                      <i class="fas fa-star"></i>
                     </li>
                   </ul>
                 </div>
@@ -1294,10 +1226,10 @@
         <div class="row">
           <div class="col-12">
             <ul class="menu-footer">
-              <li><a href="#">AGB</a></li>
-              <li><a href="#">Impressum</a></li>
+              <li><a href="agb.html">AGB</a></li>
+              <li><a href="impressum.html">Impressum</a></li>
               <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="contacts.html">Kontakt</a></li>
             </ul>
           </div>
 
@@ -1306,19 +1238,25 @@
 
             <ul class="list-social">
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
+                <i class="fab fa-instagram"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#twitter"></use>
-                </svg>
+                <i class="fab fa-twitter"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#fb"></use>
-                </svg>
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
               </a></li>
             </ul>
           </div>
