--- a/app/user.html
+++ b/app/user.html
@@ -740,29 +740,19 @@
                       <div class="rating-wrapper">
                         <ul class="list-rating">
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                         </ul>
                       </div>
@@ -778,29 +768,19 @@
                       <div class="rating-wrapper">
                         <ul class="list-rating">
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                         </ul>
                       </div>
@@ -816,29 +796,19 @@
                       <div class="rating-wrapper">
                         <ul class="list-rating">
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                         </ul>
                       </div>
@@ -854,29 +824,19 @@
                       <div class="rating-wrapper">
                         <ul class="list-rating">
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                         </ul>
                       </div>
@@ -904,29 +864,19 @@
                         <p>Profil Bewertungen (564)</p>
                         <ul class="list-rating">
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                           <li>
-                            <svg class="svg-icon">
-                              <use xlink:href="img/sprite.svg#star"></use>
-                            </svg>
+                            <i class="fas fa-star"></i>
                           </li>
                         </ul>
                       </div>
@@ -939,29 +889,19 @@
                             <p>Fliesen legen (15)</p>
                             <ul class="list-rating">
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                             </ul>
                           </li>
@@ -969,29 +909,19 @@
                             <p>Fliesen legen (15)</p>
                             <ul class="list-rating">
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                             </ul>
                           </li>
@@ -999,29 +929,19 @@
                             <p>Fliesen legen (15)</p>
                             <ul class="list-rating">
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                               <li>
-                                <svg class="svg-icon">
-                                  <use xlink:href="img/sprite.svg#star"></use>
-                                </svg>
+                                <i class="fas fa-star"></i>
                               </li>
                             </ul>
                           </li>
@@ -1063,10 +983,10 @@
         <div class="row">
           <div class="col-12">
             <ul class="menu-footer">
-              <li><a href="#">AGB</a></li>
-              <li><a href="#">Impressum</a></li>
+              <li><a href="agb.html">AGB</a></li>
+              <li><a href="impressum.html">Impressum</a></li>
               <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="contacts.html">Kontakt</a></li>
             </ul>
           </div>
 
@@ -1075,19 +995,25 @@
 
             <ul class="list-social">
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
+                <i class="fab fa-instagram"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#twitter"></use>
-                </svg>
+                <i class="fab fa-twitter"></i>
               </a></li>
               <li><a href="#">
-                <svg class="svg-icon">
-                  <use xlink:href="img/sprite.svg#fb"></use>
-                </svg>
+                <i class="fab fa-facebook-f"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-whatsapp"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-snapchat-ghost"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-vk"></i>
+              </a></li>
+              <li><a href="#">
+                <i class="fab fa-tiktok"></i>
               </a></li>
             </ul>
           </div>
