--- a/app/product-list.html
+++ b/app/product-list.html
@@ -794,7 +794,7 @@
                     <div class="card-product__footer">
                       <div class="profile-info__head">
                         <button class="profile-info__links profile-info__links-btn btn-block notPublicItem"><span class="color-red"><span class="svg-icon color-red">
-                          <i class="fas fa-plus"></i></span>Nicht veröffentlichen</span>
+                          <i class="fas fa-minus"></i></span>Nicht veröffentlichen</span>
                         </button>
 
                         <a href="#" class="profile-info__links profile-info__links-btn">
@@ -849,7 +849,7 @@
                     <div class="card-product__footer">
                       <div class="profile-info__head">
                         <button class="profile-info__links btn-block notPublicItem profile-info__links-btn"><span class="color-red"><span class="svg-icon color-red">
-                          <i class="fas fa-plus"></i></span>Nicht veröffentlichen</span>
+                          <i class="fas fa-minus"></i></span>Nicht veröffentlichen</span>
                         </button>
 
                         <a href="#" class="profile-info__links profile-info__links-btn">
