--- a/app/profile.html
+++ b/app/profile.html
@@ -757,6 +757,7 @@
                 <h3>Infos:</h3>
                 <a href="#" class="profile-info__links links-favorite">
                   <i class="fas fa-heart"></i>
+                  <i class="far fa-heart icon-hidden"></i>
                   <span>Merken |</span>
                 </a>
                 <a href="#" class="profile-info__links" data-toggle="modal" data-target="#contactModal">
